--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "com.example.ryan.wheretobuy"
+        applicationId "com.mainframevampire.ryan.wheretobuy"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -29,8 +29,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'org.jsoup:jsoup:1.10.2'
-    compile 'com.jakewharton:butterknife:8.6.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.google.android.gms:play-services-location:10.2.6'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
     testCompile 'junit:junit:4.12'
