--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         applicationId "com.mainframevampire.ryan.wheretobuy"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 4
+        versionCode 5
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+repositories {
+    mavenCentral()
 }
 
 dependencies {
@@ -30,6 +34,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
-    testCompile 'junit:junit:4.12'
+    compile 'com.facebook.android:facebook-android-sdk:4.24.0'
     compile 'com.android.support:design:25.3.1'
+    testCompile 'junit:junit:4.12'
 }
